update Readme.md file - with more information update .net version update App.config (autogenerated change)

--- a/Lottoland/Lottoland/App.config
+++ b/Lottoland/Lottoland/App.config
@@ -1,7 +1,7 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
     <add key="TestPageUrl" value="http://demoqa.com/registration/"/>
-    <add key="Browser" value="Firefox"/>     <!-- supported options Firefox, Chrome -->
+    <add key="Browser" value="Chrome"/>     <!-- supported options Firefox, Chrome -->
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/></startup></configuration>
